<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sms"
        android:icon="@drawable/ic_phone"
        android:title="SMS"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_whatsapp"
        android:icon="@drawable/ic_whatsapp"
        android:title="WhatsApp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_announcements"
        android:icon="@drawable/ic_announcements"
        android:title="@string/title_announcements"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/action_logout"
        app:showAsAction="never" />

</menu>
