<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_new_announcement"
        android:textColor="@color/textPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAnnouncementTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_announcement_title"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        app:boxCornerRadiusTopStart="@dimen/input_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/input_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/input_corner_radius"
        app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius"
        android:layout_marginBottom="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAnnouncementTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAnnouncementMessage"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_announcement_message"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        app:boxCornerRadiusTopStart="@dimen/input_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/input_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/input_corner_radius"
        app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius"
        android:layout_marginBottom="4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAnnouncementMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine"
            android:minLines="4"
            android:maxLines="8"
            android:gravity="top|start" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
